# todayilearned

./: .content  .gitignore  .hugoignore  .pre-commit-config.yaml  404.md  Makefile  Taskfile.yml  base.config.yaml  convert.py  reading.ipynb  reading.md  readme.md  todo-list.md
.githooks/: pre-commit  pre-commit-ipynb.py  readme.md
.github/: dependabot.yaml
Freelance/: payoneer.md
Linux/: readme.md  special.md  tmux.md
Operations/: google-cloud-platform.md  misc.ipynb
Productivity/: jupyter-notebook.ipynb  search-engines.md
Programming/: VIM.md  VSCode.md  VSCode_pre_print.md  codecov.md  github.ipynb  misc.md  profiling.md  travis-ci.ipynb
Security/: readme.md
Soft_Skills/: problem-solving.md
Tools/: ffmepg.md
Troubleshooting/: descriptors.md
Work/: reverse-interview.md  sallary-negotiations.md
also/: readme.md
books/: Python_Tricks.md
code/: readme.md
coding/: readme.md
coding/rust/testing/sample_project/fuzz/: Cargo.toml
coding/rust/testing/sample_project/fuzz/fuzz_targets/: test_target.rs
data/: readme.md
devops/: readme.md
linux/: arithmetic-expansion.md  bash-arithmetic-expansion.md  bash-shortcuts.md  conditions.md  expansions.md  keyboard.md  network.md  readme.ipynb  readme.md  signals.md
macOS/: keyboard.md  misc.md  shortcuts.md  stoptlight.md
macos/: machine-learning-on-mac.md  readme.md
macosx/: brew.md  serialnumbers.md
misc/: readme.md
productivity/: jupyter-notebook.ipynb
programming/: travis-ci.ipynb  vim.md  vsc.md
python/: decorators.ipynb  dunders.md  hello.txt  tools.ipynb  tools.md
(+1326 files in other folders)
